--- a/dw_apikudo/dw_apikudo-model/pom.xml
+++ b/dw_apikudo/dw_apikudo-model/pom.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+    <modelVersion>4.0.0</modelVersion>
   
-  <parent>
+    <parent>
         <groupId>com.moddb</groupId>
         <artifactId>dw_apikudo</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-  <artifactId>dw_apikudo-model</artifactId>
-  <packaging>jar</packaging>
+    <artifactId>dw_apikudo-model</artifactId>
+    <packaging>jar</packaging>
 
-  <name>dw_apikudo-model</name>
+    <name>dw_apikudo-model</name>
     <dependencies>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
@@ -30,6 +30,11 @@
             <artifactId>dropwizard-lifecycle</artifactId>
             <version>2.0.0-rc9</version>
             <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>com.rabbitmq</groupId>
+            <artifactId>amqp-client</artifactId>
+            <version>5.5.1</version>
         </dependency>
     </dependencies>
 </project>
